--- a/main/penguin/HTML/smallroom.html
+++ b/main/penguin/HTML/smallroom.html
@@ -5,21 +5,20 @@
   <title>神奇的房間</title>
   <link rel="stylesheet" href="../CSS/smallroom.css">
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script src="../JS/smallroom.js"></script>
-
+  <script src="../JS/smallroom.js"></script>
 </head>
 
 <body background="背景_尺寸已修正.png" style="background-size: 100vw;">
   <img class="carpet" src="毛茸茸地毯2.0_如果怪會再改.png">
   <img class="table" src="桌子2.0.png">
   <img class="sofanormal" src="沙發 2.0.png">
-  <a href="../../yun/html/Q1.html">
+  <a href="../../yun/html/Q1.html" target="_blank">
     <img src="沙發有紙2.0.png" class="sofapaper">
   </a>
   <img class="pillow" src="枕頭2.0.png">
   <img class="robot1" src="女僕機器人2.0 .png">
   <img class="robot2" src="女僕機器人無裙2.0 2.png">
-  <a href="../../yun/html/Q4.html">
+  <a href="../../yun/html/Q4.html" target="_blank">
     <img class="robot3" src="女僕機器人無裙有紙2.0 3.png">
   </a>
   <img class="food" src="桌上的食物2.0.png">
@@ -31,12 +30,12 @@
   <img class="net" src="撈網2.0.png">
   <img class="book" src="女僕使用手冊2.0.png">
   <img class="lgrassnormal" src="水草左無紙2.0.png">
-  <a href="../../yun/html/Q2.html">
+  <a href="../../yun/html/Q2.html" target="_blank">
     <img class="lgrasspaper" src="水草左2.0.png">
   </a>
   <img class="rgrass" src="水草右2.0.png">
   <img class="rlightclose" src="檯燈暗2.0.png">
-  <a href="../../yun/html/Q3.html">
+  <a href="../../yun/html/Q3.html" target="_blank">
     <img class="rlightpaper" src="檯燈亮有紙2.0.png">
   </a>
   <img class="llightclose" src="檯燈暗2.0.png">
@@ -48,10 +47,31 @@
   <div class="fish"></div>
 
   
-
   <div class="black">
     <p class="p"></p>
     <button class="continue" style="background-color: black; color: white; width: 6vw; height: 5vh; border: onset;">繼續探索</button>
   </div>
+
+
+
+<!-- Modal
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 id="exampleModalLabel">你發現一張紙條</h4>
+        </div>
+        <div class="modal-body">
+          <div class="Q">
+              Q: 
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
 </body>  
+</html>
 
