--- a/main/yun/html/Q4.html
+++ b/main/yun/html/Q4.html
@@ -9,9 +9,9 @@
 </head>
 <body background="../images/背景_尺寸已修正.png" style="background-size: 100vw;">
 
-    <a href="../../penguin/HTML/smallroom.html">
+    <!-- <a href="../../penguin/HTML/smallroom.html">
         <button class="back" style="width: 6vw; height: 8vh; border-radius: 10px; color: white; background-color: #303030; font-size: 1.75vw; border: onset;">返回</button>
-    </a>
+    </a> -->
 
     <img class="paper" src="../images/paper.png">
     <div class="Q">
