update for the exhibition

--- a/main/penguin/HTML/smallroom.html
+++ b/main/penguin/HTML/smallroom.html
@@ -24,7 +24,7 @@
   <img class="food" src="桌上的食物2.0.png">
   <img class="garbage" src="垃圾桶 2.0.png">
   <img class="door" src="門2.0 2.png">
-  <a href="../../ca/HTML/gate.html">
+  <a href="../../ca/HTML/gate.html" target="_blank">
     <img class="lock" src="密碼鎖2.0.png">
   </a>
   <img class="net" src="撈網2.0.png">
