--- a/main/yun/html/Q4.html
+++ b/main/yun/html/Q4.html
@@ -16,7 +16,7 @@
     <img class="paper" src="../images/paper.png">
     <div class="Q">
         <div class="Q4">
-            我們是北一資研第幾屆？<br>（取個位數字）
+            今年是北一女中第幾屆校慶？<br>（三個數字相加）
         </div>
     </div>
 
