--- a/main/ca/HTML/gate.html
+++ b/main/ca/HTML/gate.html
@@ -18,19 +18,19 @@
     <input type="number" class="input" placeholder="請輸入密碼並大喊芝麻開門">
     <div class="button">
         <div class="b123">
-            <button class="b1" style="width: 5.15vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">1</button>
-            <button class="b2" style="width: 5.15vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">2</button>
-            <button class="b3" style="width: 5.15vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">3</button>
+            <button class="b1" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">1</button>
+            <span>&nbsp;</span><button class="b2" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">2</button>
+            <span>&nbsp;</span><button class="b3" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">3</button>
         </div>
         <div class="b456">
-            <button class="b4" style="width: 5.15vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">4</button>
-            <button class="b5" style="width: 5.15vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">5</button>
-            <button class="b6" style="width: 5.15vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">6</button>
+            <button class="b4" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">4</button>
+            <span>&nbsp;</span><button class="b5" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">5</button>
+            <span>&nbsp;</span><button class="b6" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">6</button>
         </div>
         <div class="b789">
-            <button class="b7" style="width: 5.15vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">7</button>
-            <button class="b8" style="width: 5.15vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">8</button>
-            <button class="b9" style="width: 5.15vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">9</button>
+            <button class="b7" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">7</button>
+            <span>&nbsp;</span><button class="b8" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">8</button>
+            <span>&nbsp;</span><button class="b9" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">9</button>
     </div>
         <button class="enter" style="width: 6vw; height: 8vh; border-radius: 10px; color: white; background-color: #303030; font-size: 1.75vw;">enter</button>
     </div>
