--- a/main/penguin/HTML/smallroom.html
+++ b/main/penguin/HTML/smallroom.html
@@ -49,7 +49,7 @@
   
   <div class="black">
     <p class="p"></p>
-    <button class="continue" style="background-color: black; color: white; width: 6vw; height: 5vh; border: onset;">繼續探索</button>
+    <button class="continue" style="background-color: black; color: white; width: 6vw; height: 5vh; border: onset; font-size: large;">繼續探索</button>
   </div>
 
 
