--- a/main/yun/html/Q1.html
+++ b/main/yun/html/Q1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>紙條</title>
     <link rel="stylesheet" href="../css/QA.css">
+    <link rel="stylesheet" href="../../penguin/CSS/smallroom.css">
 </head>
 <body background="../images/背景_尺寸已修正.png" style="background-size: 100vw;">
 
@@ -44,7 +45,7 @@
     <img class="carpet" src="../images/毛茸茸地毯2.0_如果怪會再改.png">
     <img class="robot" id="rnormal" src="../images/女僕機器人2.0 .png">
     <img class="garbage" src="../images/垃圾桶 2.0.png">
-    <img class="lock2" src="../images/密碼鎖2.0.png">
+    <img class="lock" src="../images/密碼鎖2.0.png">
     <img class="net" src="../images/撈網2.0.png">
     <img class="book" src="../images/女僕使用手冊2.0.png">
     <img class="lgrassnormal" src="../images/水草左無紙2.0.png">
