--- a/main/ca/HTML/gate.html
+++ b/main/ca/HTML/gate.html
@@ -6,28 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>神秘的大門...</title>
     <link rel="stylesheet" type="text/css" href="../CSS/gate.css">
+    <link rel="stylesheet" href="../../penguin/CSS/smallroom.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../JS/gate.js"></script>
 </head>
 <body background="../images/background.png" style="background-size: 100vw;">
     <img src="../images/door.png" class="door">
-    <img src="../images/lock2.0.png" class="lock">
+    <img src="../images/lock2.0.png" class="lock2">
     <input type="number" class="input" placeholder="請輸入密碼並大喊芝麻開門">
     <div class="button">
         <div class="b123">
-            <button class="b1" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">1</button>
-            <span>&nbsp;</span><button class="b2" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">2</button>
-            <span>&nbsp;</span><button class="b3" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">3</button>
+            <button class="b1" style="width: 5.7vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">1</button>
+            <span>&nbsp;</span><button class="b2" style="width: 5.6vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">2</button>
+            <span>&nbsp;</span><button class="b3" style="width: 5.6vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">3</button>
         </div>
         <div class="b456">
-            <button class="b4" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">4</button>
-            <span>&nbsp;</span><button class="b5" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">5</button>
-            <span>&nbsp;</span><button class="b6" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">6</button>
+            <button class="b4" style="width: 5.7vw; height: 13vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">4</button>
+            <span>&nbsp;</span><button class="b5" style="width: 5.6vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">5</button>
+            <span>&nbsp;</span><button class="b6" style="width: 5.6vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">6</button>
         </div>
         <div class="b789">
-            <button class="b7" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">7</button>
-            <span>&nbsp;</span><button class="b8" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">8</button>
-            <span>&nbsp;</span><button class="b9" style="width: 5.5vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">9</button>
+            <button class="b7" style="width: 5.7vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">7</button>
+            <span>&nbsp;</span><button class="b8" style="width: 5.6vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">8</button>
+            <span>&nbsp;</span><button class="b9" style="width: 5.6vw; height: 12.5vh; border-radius: 9px; color: white; background-color: #303030; font-size: 3vw;">9</button>
     </div>
         <button class="enter" style="width: 6vw; height: 8vh; border-radius: 10px; color: white; background-color: #303030; font-size: 1.75vw;">enter</button>
     </div>
@@ -38,7 +39,7 @@
     <img class="pillow" src="../images/枕頭2.0.png">
     <img class="robot" id="rnormal" src="../images/女僕機器人2.0 .png">
     <img class="garbage" src="../images/垃圾桶 2.0.png">
-    <img class="lock2" src="../images/密碼鎖2.0.png">
+    <img class="lock" src="../images/密碼鎖2.0.png">
     <img class="net" src="../images/撈網2.0.png">
     <img class="book" src="../images/女僕使用手冊2.0.png">
     <img class="lgrassnormal" src="../images/水草左無紙2.0.png">
